crates/pg_syntax/tests/snapshots/postgres_regress/int8@82.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '-9223372036854775800'::int8 + '-9223372036854775800'::int8;"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..66
    AExpr@7..66
      TypeCast@7..35
        AConst@7..29
          Sconst@7..29 "'-9223372036854775800'"
        Typecast@29..31 "::"
        TypeName@31..35
          Ident@31..35 "int8"
      Whitespace@35..36 " "
      Ascii43@36..37 "+"
      Whitespace@37..38 " "
      TypeCast@38..66
        AConst@38..60
          Sconst@38..60 "'-9223372036854775800'"
        Typecast@60..62 "::"
        TypeName@62..66
          Ident@62..66 "int8"
  Ascii59@66..67 ";"

