crates/pg_syntax/tests/snapshots/postgres_regress/int8@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '9223372036854775800'::int8 - '-9223372036854775800'::int8;"
---
SelectStmt@0..66
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..65
      TypeCast@7..34
        AConst@7..28
          Sconst@7..28 "'9223372036854775800'"
        Typecast@28..30 "::"
        TypeName@30..34
          Ident@30..34 "int8"
      Whitespace@34..35 " "
      Ascii45@35..36 "-"
      Whitespace@36..37 " "
      TypeCast@37..65
        AConst@37..59
          Sconst@37..59 "'-9223372036854775800'"
        Typecast@59..61 "::"
        TypeName@61..65
          Ident@61..65 "int8"
  Ascii59@65..66 ";"

