crates/pg_syntax/tests/snapshots/postgres_regress/int8@84.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '-9223372036854775800'::int8 - '9223372036854775800'::int8;"
---
SelectStmt@0..66
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..65
      TypeCast@7..35
        AConst@7..29
          Sconst@7..29 "'-9223372036854775800'"
        Typecast@29..31 "::"
        TypeName@31..35
          Ident@31..35 "int8"
      Whitespace@35..36 " "
      Ascii45@36..37 "-"
      Whitespace@37..38 " "
      TypeCast@38..65
        AConst@38..59
          Sconst@38..59 "'9223372036854775800'"
        Typecast@59..61 "::"
        TypeName@61..65
          Ident@61..65 "int8"
  Ascii59@65..66 ";"

