crates/pg_syntax/tests/snapshots/postgres_regress/int8@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '9223372036854775800'::int8 * '9223372036854775800'::int8;"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..64
    AExpr@7..64
      TypeCast@7..34
        AConst@7..28
          Sconst@7..28 "'9223372036854775800'"
        Typecast@28..30 "::"
        TypeName@30..34
          Ident@30..34 "int8"
      Whitespace@34..35 " "
      Ascii42@35..36 "*"
      Whitespace@36..37 " "
      TypeCast@37..64
        AConst@37..58
          Sconst@37..58 "'9223372036854775800'"
        Typecast@58..60 "::"
        TypeName@60..64
          Ident@60..64 "int8"
  Ascii59@64..65 ";"

