crates/pg_syntax/tests/snapshots/postgres_regress/int8@88.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select abs('-9223372036854775808'::int8);"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..10 "abs"
      Ascii40@10..11 "("
      TypeCast@11..39
        AConst@11..33
          Sconst@11..33 "'-9223372036854775808'"
        Typecast@33..35 "::"
        TypeName@35..39
          Ident@35..39 "int8"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

