crates/pg_syntax/tests/snapshots/postgres_regress/int8@89.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '9223372036854775800'::int8 + '100'::int4;"
---
SelectStmt@0..49
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..48
    AExpr@7..48
      TypeCast@7..34
        AConst@7..28
          Sconst@7..28 "'9223372036854775800'"
        Typecast@28..30 "::"
        TypeName@30..34
          Ident@30..34 "int8"
      Whitespace@34..35 " "
      Ascii43@35..36 "+"
      Whitespace@36..37 " "
      TypeCast@37..48
        AConst@37..42
          Sconst@37..42 "'100'"
        Typecast@42..44 "::"
        TypeName@44..48
          Ident@44..48 "int4"
  Ascii59@48..49 ";"

